--- a/motion_intention/CMakeLists.txt
+++ b/motion_intention/CMakeLists.txt
@@ -60,11 +60,11 @@ find_package(Torch REQUIRED)
  )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
+add_service_files(
+   FILES
+   SetInt.srv
 #   Service2.srv
-# )
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
