--- a/motion_intention/config/mint_config.yaml
+++ b/motion_intention/config/mint_config.yaml
@@ -7,3 +7,7 @@ intention_predictor/state_dim: 2
 intention_predictor/seq_length: 125
 intention_predictor/history_rate: 200
 intention_predictor/mint_state_dim: 4
+
+history_handler/state_dim: 2
+history_handler/seq_length: 125
+history_handler/history_rate: 200.0
