Lots of changes, lots of bugs. Bugs bugs bugs.

--- a/trial_data_logger/CMakeLists.txt
+++ b/trial_data_logger/CMakeLists.txt
@@ -103,12 +103,12 @@ find_package(catkin REQUIRED COMPONENTS
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
-catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES trial_data_logger
-#  CATKIN_DEPENDS message_generation rospy std_msgs
-#  DEPENDS system_lib
-)
+#catkin_package(
+# INCLUDE_DIRS include
+# LIBRARIES trial_data_logger
+# CATKIN_DEPENDS message_generation rospy std_msgs
+# DEPENDS system_lib
+#)
 
 ###########
 ## Build ##
@@ -160,10 +160,10 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+catkin_install_python(PROGRAMS
+  scripts/sync_logger.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
