Updated files to publish fitted output info. Possible issue when run in simulation.

--- a/motion_intention/CMakeLists.txt
+++ b/motion_intention/CMakeLists.txt
@@ -59,6 +59,7 @@ find_package(iir REQUIRED) # for filtering the inputs to the mintnet
  add_message_files(
    FILES
    HistoryStamped.msg
+   FullFitIO.msg
 #   Message2.msg
  )
 
