--- a/motion_intention/CMakeLists.txt
+++ b/motion_intention/CMakeLists.txt
@@ -147,7 +147,7 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(${PROJECT_NAME}_node src/motion_intention_node.cpp)
 add_executable(history_handler_node src/history_handler_node.cpp)
-add_executable(mintwrapper_test src/mintwrapper_test.cpp)
+add_executable(admit_cont src/admit_cont.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -160,7 +160,7 @@ add_executable(mintwrapper_test src/mintwrapper_test.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(history_handler_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(mintwrapper_test ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(admit_cont ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node
@@ -172,7 +172,7 @@ target_link_libraries(history_handler_node
    ${TORCH_LIBRARIES}
    iir::iir)
    
-target_link_libraries(mintwrapper_test
+target_link_libraries(admit_cont
    ${catkin_LIBRARIES}
    ${TORCH_LIBRARIES})
    
